Typo: Reorder to front / Reorder to back tooltip #94526

Closed
opened 2021-12-31 04:07:43 +01:00 by Alex Fulcrum · 4 comments

System Information
Operating system: Windows 10
Graphics card: EVGA RTX 3080 Ti

Blender Version
Broken: Blender 3.0 Stable

Short description of error
Mouseover/tooltip text in right-click menu for workspaces has a typo making two options ambiguous. "Reorder to back" and "Reorder to front" both read "Reorder workspace to be first in the list."

Exact steps for others to reproduce the error
Right click a workspace tab.
Mouse over "Reorder to back" or "Reorder to front" option.

**System Information** Operating system: Windows 10 Graphics card: EVGA RTX 3080 Ti **Blender Version** Broken: Blender 3.0 Stable **Short description of error** Mouseover/tooltip text in right-click menu for workspaces has a typo making two options ambiguous. "Reorder to back" and "Reorder to front" both read "Reorder workspace to be first in the list." **Exact steps for others to reproduce the error** Right click a workspace tab. Mouse over "Reorder to back" or "Reorder to front" option.
Author

Added subscriber: @Alex-Fulcrum

Added subscriber: @Alex-Fulcrum
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Alaska self-assigned this 2021-12-31 04:16:07 +01:00

This issue was referenced by 34d424fd64

This issue was referenced by 34d424fd64bb87894f3246d317d9c4780536befb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94526
No description provided.